test/good/classes/constructor02.px

class C def
    a: [Int]

    constructor def
        this.a[0] = 0

a = [3, 4]
c = C(a)
a[1] = -2
print c.a
