test/bad/classes/constructor03.px

class Test def
    constructor(Int b: 0) def
        skip

Test(a=3)
